--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -2,12 +2,13 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mainFragment">
 
-<!--    <fragment-->
-<!--        android:id="@+id/mainFragment"-->
-<!--        android:name="com.example.iesbcoinsclass.presentation.ui.main.MainFragment"-->
-<!--        tools:layout="@layout/main_fragment" >-->
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.iesbcoinapp.presentation.main.MainFragment"
+        tools:layout="@layout/main_fragment" >
 <!--        <action-->
 <!--            android:id="@+id/action_mainFragment_to_detailsFragment"-->
 <!--            app:destination="@id/detailsFragment"-->
@@ -15,7 +16,7 @@
 <!--            app:exitAnim="@anim/slide_out_left"-->
 <!--            app:popEnterAnim="@anim/slide_in_left"-->
 <!--            app:popExitAnim="@anim/slide_out_right"/>-->
-<!--    </fragment>-->
+    </fragment>
 <!--    <fragment-->
 <!--        android:id="@+id/detailsFragment"-->
 <!--        android:name="com.example.coinmarketcapproject.ui.detail.DetailsFragment"-->
